--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "style": "eslint alpine"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/RisingStack/docker-node/issues"
   },
-  "homepage": "https://github.com/RisingStack/docker-node#readme"
+  "homepage": "https://github.com/RisingStack/docker-node#readme",
+  "dependencies": {
+    "handlebars": "4.0.5"
+  },
+  "devDependencies": {
+    "eslint-config-standard": "4.4.0",
+    "eslint-plugin-standard": "1.3.1"
+  }
 }
