feat(alpine): adding alpine support

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/RisingStack/docker-node#readme",
   "dependencies": {
-    "handlebars": "4.0.5"
+    "handlebars": "4.0.5",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "eslint-config-standard": "4.4.0",
