--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "style": "eslint alpine"
+    "style": "eslint index.js alpine"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/RisingStack/docker-node#readme",
   "dependencies": {
+    "debug": "^2.2.0",
     "handlebars": "4.0.5",
     "mkdirp": "^0.5.1"
   },
