refactor(images): remove duplicated code

--- a/alpine/v4.2.4/Dockerfile
+++ b/alpine/v4.2.4/Dockerfile
@@ -10,7 +10,7 @@ RUN apk add --update curl make gcc g++ binutils-gold python linux-headers paxctl
   make install && \
   paxctl -cm /usr/bin/node && \
   cd / && \
-  apk del curl make gcc g++ binutils-gold python linux-headers paxctl libgcc libstdc++ && \
-  rm -rf /etc/ssl /node-v4.2.4 /usr/include \
+  apk del curl make gcc g++ binutils-gold python linux-headers paxctl  && \
+  rm -rf /etc/ssl /node-v4.2.4  \
     /usr/share/man /tmp/* /var/cache/apk/* /root/.npm /root/.node-gyp \
     /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html
