fix(alpine): using /usr/src/node-app as workdir

--- a/alpine/v4.2.4/Dockerfile
+++ b/alpine/v4.2.4/Dockerfile
@@ -13,3 +13,5 @@ RUN curl -sSL https://nodejs.org/dist/v4.2.4/node-v4.2.4.tar.gz | tar -xz && \
   rm -rf /etc/ssl /node-v4.2.4 /usr/include \
     /usr/share/man /tmp/* /var/cache/apk/* /root/.npm /root/.node-gyp \
     /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html
+
+WORKDIR /usr/src/node-app
