--- a/alpine/base/Dockerfile
+++ b/alpine/base/Dockerfile
@@ -3,7 +3,9 @@ FROM alpine:3.3
 MAINTAINER Gergely Nemeth <gergely@risingstack.com>
 
 RUN apk add --update \
+	binutils-gold \
 	build-base \
 	curl \
 	linux-headers \
+	paxctl \
 	python
