feat(trusty): use the the risingstack/trusty-base image

--- a/ubuntu/trusty/v5.3.0/Dockerfile
+++ b/ubuntu/trusty/v5.3.0/Dockerfile
@@ -1,18 +1,10 @@
-FROM ubuntu:trusty
+FROM risingstack:trusty-base
 
 MAINTAINER Gergely Nemeth <gergely@risingstack.com>
-
-RUN apt-get update && apt-get install -y \
-      apt-transport-https \
-      build-essential \
-      ca-certificates \
-      curl \
-      libicu-dev \
-      lsb-release \
-      python-all \
- && rm -rf /var/lib/apt/lists/*;
 
 RUN   curl -sSL https://nodejs.org/dist/v5.3.0/node-v5.3.0.tar.gz | tar -xz && \
   cd /node-v5.3.0 && \
   ./configure --prefix=/usr && \
   make && sudo make install
+
+WORKDIR /usr/src/node-app
