--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,15 @@
 machine:
   services:
     - docker
+
+dependencies:
+  override:
+    - docker info
+    - cd alpine/base && docker build -t risingstack/alpine-base:latest .
+
+deployment:
+  hub:
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - cd alpine/base && docker push risingstack/alpine-base:latest .
