--- a/circle.yml
+++ b/circle.yml
@@ -12,4 +12,4 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - cd alpine/base && docker push risingstack/alpine-base:latest .
+      - cd alpine/base && docker push risingstack/alpine-base:latest
