fix(alpine): update the alpine images

--- a/alpine/base/Dockerfile
+++ b/alpine/base/Dockerfile
@@ -3,6 +3,7 @@ FROM alpine:3.3
 MAINTAINER Gergely Nemeth <gergely@risingstack.com>
 
 RUN apk add --update \
+	binutils-gold \
 	curl \
 	git \
 	gcc \
