--- a/alpine/v4.2.4/Dockerfile
+++ b/alpine/v4.2.4/Dockerfile
@@ -5,7 +5,11 @@ MAINTAINER Gergely Nemeth <gergely@risingstack.com>
 RUN curl -sSL https://nodejs.org/dist/v4.2.4/node-v4.2.4.tar.gz | tar -xz && \
   cd /node-v4.2.4 && \
   ./configure --prefix=/usr && \
-  make -j$(grep -c ^processor /proc/cpuinfo 2>/dev/null || 1) && \
+  NPROC=$(grep -c ^processor /proc/cpuinfo 2>/dev/null || 1) && \
+  make out/Makefile && \
+  make -j${NPROC} -C out mksnapshot && \
+  paxctl -cm out/Release/mksnapshot && \
+  make -j${NPROC} && \
   make install && \
   paxctl -cm /usr/bin/node && \
   cd / && \
@@ -13,5 +17,5 @@ RUN curl -sSL https://nodejs.org/dist/v4.2.4/node-v4.2.4.tar.gz | tar -xz && \
   rm -rf /etc/ssl /node-v4.2.4 /usr/include \
     /usr/share/man /tmp/* /var/cache/apk/* /root/.npm /root/.node-gyp \
     /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html
-
+    
 WORKDIR /usr/src/node-app
