--- a/alpine/v5.3.0/Dockerfile
+++ b/alpine/v5.3.0/Dockerfile
@@ -13,7 +13,7 @@ RUN curl -sSL https://nodejs.org/dist/v5.3.0/node-v5.3.0.tar.gz | tar -xz && \
   make install && \
   paxctl -cm /usr/bin/node && \
   cd / && \
-  rm -rf /etc/ssl /node-v4.2.4 /usr/include \
+  rm -rf /etc/ssl /node-v4.2.4 \
     /usr/share/man /tmp/* /var/cache/apk/* /root/.npm /root/.node-gyp \
     /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html
 
