--- a/circle.yml
+++ b/circle.yml
@@ -9,8 +9,12 @@ dependencies:
     - cd ubuntu/trusty/base && docker build -t risingstack/trusty-base:latest .
     - cd ubuntu/trusty/v4.2.4 && docker build -t risingstack/trusty:v4.2.4 .
     - cd ubuntu/trusty/v5.3.0 && docker build -t risingstack/trusty:v5.3.0 .
+    - cd ubuntu/trusty/v5.4.0 && docker build -t risingstack/trusty:v5.4.0 .
+    - cd ubuntu/trusty/v5.4.1 && docker build -t risingstack/trusty:v5.4.1 .
     - cd alpine/v4.2.4 && docker build -t risingstack/alpine:v4.2.4 .
     - cd alpine/v5.3.0 && docker build -t risingstack/alpine:v5.3.0 .
+    - cd alpine/v5.4.0 && docker build -t risingstack/alpine:v5.4.0 .
+    - cd alpine/v5.4.1 && docker build -t risingstack/alpine:v5.4.1 .
 
 deployment:
   hub:
@@ -21,5 +25,9 @@ deployment:
       - cd ubuntu/trusty/base && docker push risingstack/trusty-base:latest
       - cd ubuntu/trusty/v4.2.4 && docker push risingstack/trusty:v4.2.4
       - cd ubuntu/trusty/v5.3.0 && docker push risingstack/trusty:v5.3.0
+      - cd ubuntu/trusty/v5.4.0 && docker push risingstack/trusty:v5.4.0
+      - cd ubuntu/trusty/v5.4.1 && docker push risingstack/trusty:v5.4.1
       - cd alpine/v4.2.4 && docker push risingstack/alpine:v4.2.4
       - cd alpine/v5.3.0 && docker push risingstack/alpine:v5.3.0
+      - cd alpine/v5.4.0 && docker push risingstack/alpine:v5.4.0
+      - cd alpine/v5.4.1 && docker push risingstack/alpine:v5.4.1
