--- a/circle.yml
+++ b/circle.yml
@@ -9,8 +9,8 @@ machine:
 dependencies:
   override:
     - docker info
-    - version=(node -pe "($(cat package.json)).version"); cd ubuntu/trusty/v4.2.4 && docker build -t risingstack/trusty:v4.2.4-$version .;
-    - version=(node -pe "($(cat package.json)).version"); cd ubuntu/trusty/v5.4.1 && docker build -t risingstack/trusty:v5.4.1-$version .;
+    - version=$(node -pe "($(cat package.json)).version"); cd ubuntu/trusty/v4.2.4 && docker build -t risingstack/trusty:v4.2.4-$version .;
+    - version=$(node -pe "($(cat package.json)).version"); cd ubuntu/trusty/v5.4.1 && docker build -t risingstack/trusty:v5.4.1-$version .;
 
 
 deployment:
@@ -18,5 +18,5 @@ deployment:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - version=(node -pe "($(cat package.json)).version"); cd ubuntu/trusty/v4.2.4 && docker push risingstack/trusty:v4.2.4-$version;
-      - version=(node -pe "($(cat package.json)).version"); cd ubuntu/trusty/v5.4.1 && docker push risingstack/trusty:v5.4.1-$version;
+      - version=$(node -pe "($(cat package.json)).version"); cd ubuntu/trusty/v4.2.4 && docker push risingstack/trusty:v4.2.4-$version;
+      - version=$(node -pe "($(cat package.json)).version"); cd ubuntu/trusty/v5.4.1 && docker push risingstack/trusty:v5.4.1-$version;
