--- a/alpine/3.3-v5.5.0/Dockerfile
+++ b/alpine/3.3-v5.5.0/Dockerfile
@@ -1,9 +1,9 @@
-FROM risingstack/alpine-base
+FROM risingstack/alpine-base:3.3-1.0.4
 
 MAINTAINER Gergely Nemeth <gergely@risingstack.com>
 
-RUN curl -sSL https://nodejs.org/dist/v5.4.0/node-v5.4.0.tar.gz | tar -xz && \
-  cd /node-v5.4.0 && \
+RUN curl -sSL https://nodejs.org/dist/v5.5.0/node-v5.5.0.tar.gz | tar -xz && \
+  cd /node-v5.5.0 && \
   ./configure --prefix=/usr && \
   NPROC=$(grep -c ^processor /proc/cpuinfo 2>/dev/null || 1) && \
   make out/Makefile && \
