--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "debug": "^2.2.0",
     "fs-readdir-recursive": "^1.0.0",
     "handlebars": "4.0.5",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "rimraf": "2.5.1"
   },
   "devDependencies": {
     "eslint-config-standard": "4.4.0",
