fix(env): adding NODE_ENV=production

--- a/alpine/3.3-v5.6.0/Dockerfile
+++ b/alpine/3.3-v5.6.0/Dockerfile
@@ -17,4 +17,5 @@ RUN curl -sSL https://nodejs.org/dist/v5.6.0/node-v5.6.0.tar.gz | tar -xz && \
     /usr/share/man /tmp/* /var/cache/apk/* /root/.npm /root/.node-gyp \
     /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html
 
+ENV NODE_ENV=production
 WORKDIR /usr/src/node-app
