--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "style": "eslint index.js alpine"
+    "style": "eslint index.js alpine",
+    "changelog": "conventional-changelog -p angular -o CHANGELOG.md -r 500"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "rimraf": "2.5.1"
   },
   "devDependencies": {
+    "conventional-changelog": "0.5.3",
     "eslint-config-standard": "4.4.0",
     "eslint-plugin-standard": "1.3.1"
   }
