--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs:
           command: |
             set -eoux pipefail
             version=$(jq -r ".version" package.json)
-            cd alpine/3.7-v8.10.0
-            docker build -t risingstack/alpine:3.7-v8.10.0-$version .
+            cd alpine/3.7-v8.9.4
+            docker build -t risingstack/alpine:3.7-v8.9.4-$version .
       - run:
           name: Test 3.7-v8.10.0
           command: |
@@ -47,8 +47,8 @@ jobs:
               docker login -u $DOCKER_USER -p $DOCKER_PASS
               version=$(jq -r ".version" package.json)
               cd alpine/3.4-v8.9.4
-              docker push risingstack/alpine:3.7-$version
+              docker push risingstack/alpine:3.7-v8.9.4-$version
               # push second image, remove if not necessary
               cd ../3.7-v8.10.0
-              docker push risingstack/alpine:3.7-$version
+              docker push risingstack/alpine:3.7-v8.10.0-$version
             fi
